--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,13 @@ path = "src/04/main.rs"
 name = "04_second"
 path = "src/04/second.rs"
 
+[[bin]]
+name = "05"
+path = "src/05/main.rs"
+
+[[bin]]
+name = "06"
+path = "src/06/main.rs"
 
 [dependencies]
 regex = "1.11.1"
