--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,10 @@ path = "src/08/main.rs"
 name = "09"
 path = "src/09/main.rs"
 
+[[bin]]
+name = "09_second"
+path = "src/09/second.rs"
+
 [dependencies]
 regex = "1.11.1"
 itertools = "0.13.0"
